[package]
name = "content-archiver"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["stream"] }
chrono = "0.4"
url = "2.2"
anyhow = "1.0"
log = "0.4"
